# isomdl-uniffi

./: .gitignore  .pre-commit-build-bindings.sh  .pre-commit-config.yaml  .pre-commit-run-tests.sh  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  build-python-bindings.sh  build.py  holder-old.rs  license-template-indicio.txt  license-template-with-spruceid.txt  test-bindings.py  uuid-changes.patch
.github/: CI_CD_SETUP.md  DCO.md  dependabot.yml
.github/workflows/: ci.yml  pr-check.yml  pr-checks.yml  release.yml
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/gradle/: libs.versions.toml
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/androidUnitTest/kotlin/tech/indicio/isomdl_uniffi/: Test.android.kt
kotlin/src/commonMain/kotlin/tech/indicio/isomdl_uniffi/: uniffiStack.kt
kotlin/src/commonTest/kotlin/tech/indicio/isomdl_uniffi/: Test.kt
kotlin/src/iosTest/kotlin/tech/indicio/isomdl_uniffi/: Test.ios.kt
python/: INSTALL.md  MANIFEST.in  README.md  build-python-bindings.sh  build.py  pyproject.toml  setup.py  test-bindings.py
python/isomdl_uniffi/: __init__.py  isomdl_uniffi.py  libisomdl_uniffi.dylib
python/precommit/: README.md  build-bindings.sh  run-tests.sh
python/tests/: README.md  conftest.py  generate_cross_language_artifacts.py  run_tests.py  test_basic_functionality.py  test_chaining.py  test_complete_workflow.py  test_cross_language_verification.py  test_data_validation.py  test_error_handling.py  test_integration.py  test_mdoc_operations.py  test_oid4vp_verification.py  test_presentation_session.py  test_protocol_compliance.py  test_reader_functionality.py  test_security.py  test_selective_disclosure.py  test_state_machine.py  utils.py
rust/: .cargo-audit.toml  Cargo.toml  LICENSE-SPRUCE-APACHE  LICENSE-SPRUCE-MIT  build-python.sh  uniffi-bindgen.rs
rust/src/: lib.rs
rust/src/mdl/: holder.rs  issuer.rs  mdl_issuer.rs  mdoc.rs  mod.rs  reader.rs  util.rs  verifier.rs
rust/tests/: intermediate_chaining.rs
rust/tests/res/mdl/: utrecht-certificate.pem  utrecht-key.pem
tests/: README.md  run_tests.py  test_basic_functionality.py  test_complete_workflow.py  test_integration.py  test_mdl_functionality.py  test_mdoc_operations.py  test_presentation_session.py  test_reader_functionality.py  test_simplified_api.py
typescript/: jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/tests/: credo_oid4vp.test.ts  generate_device_response.test.ts  mdl_verification.test.ts  sphereon_experiment.test.ts  sphereon_oid4vp.test.ts
