[package]
name = "isomdl-uniffi"
version = "0.1.0"
edition = "2024"

[dependencies]
uniffi = "0.28.3"
isomdl = { git = "https://github.com/spruceid/isomdl", rev = "6084a83"}
serde = "1.0.219"
thiserror = "2.0.12"
serde_json = "1.0.140"
uuid = "1.16.0"
base64 = "0.22.1"
p256 = { version = "0.13.2", features = ["jwk", "pkcs8"] }
anyhow = "1.0.98"
time = "0.3.41"
x509-cert = { version = "0.2.5", features = ["hazmat"] }
rand = "0.9.1"
sha1 = "0.10.6"
signature = "2.2.0"
crunchy = "=0.2.2"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"