[package]
name = "isomdl-uniffi"
version = "0.1.0"
edition = "2021"

[build-dependencies]
uniffi = { version = "0.28.3", features = [ "build" ] }

[dependencies]
uniffi = { version = "0.28.3", features = [ "cli" ] }
isomdl = { git = "https://github.com/spruceid/isomdl", rev = "fed574c"}
serde = "1.0.219"
# serde_cbor = "0.11.2"  # Replaced with ciborium (already included below)
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
serde_json = "1.0.140"
uuid = "1.16.0"
base64 = "0.22.1"
p256 = { version = "0.13.2", features = ["jwk", "pkcs8"] }
anyhow = "1.0.98"
base64ct = "=1.6.0"
time = "0.3.41"
x509-cert = { version = "0.2.5", features = ["hazmat", "builder", "pem"] }
rand = "0.9.1"
sha1 = "0.10.6"
signature = "2.2.0"
crunchy = "=0.2.2"
ciborium = "0.2.2"
pem = "3.0.4"
sha2 = "0.10.8"
hex = "0.4.3"
pkcs8 = { version = "0.10", features = ["pem"] }
rsa = { version = "0.9", features = ["sha2"] }  # Keep current until 0.10 is stable

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
