# Copyright (c) 2025 Indicio
# SPDX-License-Identifier: Apache-2.0 OR MIT
#
# This software may be modified and distributed under the terms
# of either the Apache License, Version 2.0 or the MIT license.
# See the LICENSE-APACHE and LICENSE-MIT files for details.
#
# This project contains code from Spruce Systems, Inc.
# (https://github.com/spruceid/isomdl)
# Copyright (c) 2022 Spruce Systems, Inc.

[package]
name = "isomdl-uniffi"
version = "0.1.0"
edition = "2024"
authors = ["Indicio <support@indicio.tech>"]
description = "UniFFI bindings for ISO 18013-5 Mobile Driver's License (mDL) library"
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/Indicio-tech/isomdl-uniffi"
repository = "https://github.com/Indicio-tech/isomdl-uniffi"
documentation = "https://github.com/Indicio-tech/isomdl-uniffi"
keywords = ["mdl", "iso18013", "digital-identity", "mobile-drivers-license", "verifiable-credentials"]
categories = ["cryptography", "api-bindings"]

[build-dependencies]
uniffi = { version = "0.28.3", features = [ "build" ] }

[dependencies]
uniffi = { version = "0.28.3", features = [ "cli" ] }
isomdl = { git = "https://github.com/spruceid/isomdl", rev = "fed574c"}
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2.2"
coset = "0.4"
p256 = { version = "0.13.2", features = ["jwk", "pkcs8"] }
pem = "3.0.4"
rand = "0.9.1"
serde = "1.0.219"
serde_bytes = "0.11"
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.8"
signature = "2.2.0"
thiserror = "2.0.12"
time = "0.3.41"
uuid = "1.16.0"
x509-cert = { version = "0.2.5", features = ["hazmat", "builder", "pem"] }

[dev-dependencies]
rand_core = "0.6"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
